--- a/how_it_works/css/main.css
+++ b/how_it_works/css/main.css
@@ -68,3 +68,51 @@ a, a:hover{
     border-radius: 50%;
     display: inline-block;
 }
+
+
+.card {
+    flex-direction:row;
+    border-color: blue;
+    background-color: blue;
+    color: white;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    margin-left: 20%;
+    border-radius:10px;
+    text-align: left;
+}
+
+.intro{
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+
+}
+
+.card_2 {
+    flex-direction:row;
+    border: none;
+    background-color: blue;
+    color: white;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    margin-left: 20%;
+    border-radius:10px;
+    text-align: left;
+}
+
+.card img{
+    background-color: white;
+    width: 30%;
+}
+
+.card_2 img{
+    background-color: white;
+    width: 40%;
+}
+
+.card_body{
+    padding-left: 4%;
+    padding-right: 2%;
+    padding-bottom: 10%;
+}
