finished up sign up page and sign in page except for border curve

--- a/sign_in_page/css/main.css
+++ b/sign_in_page/css/main.css
@@ -1,51 +1,100 @@
 .grid-container1 {
     display: grid;
-    width: 40vw;
-    height: 75vh;
     border: 1px solid black;
-    justify-content: center;
+    grid-template-columns: 55vw 45vw;
+    grid-template-rows: 60vh 40vh;
+    justify-content: end;
     text-align: center;
-    margin-top: 50px;
     margin-left: 50px;
-    margin-bottom: 50px;
+}
+
+.grid-item-1 {
+    height: 100vh;
+    background-color: blue;
+    color: white;
+}
+
+.button1 {
+    border-radius: 30px;
+    border: 3px solid white;
+    font-weight: bold;
+}
+
+.firsth2 {
+    margin-top: 10vh;
+}
+
+h2 {
+    margin-bottom: 3vh;
+}
+
+.signin {
+    width: 50vh;
+    height: auto;
 }
 
 h1 {
     margin: 75px;
     font-size: 60px;
+    font-weight: 650;
 }
 
 input {
-    border-radius: 24px;
+    border-radius: 30px;
     margin: 20px;
     width: 25vw;
     height: 60px;
+    margin-bottom: 40px;
+    border: 1px solid black;
+}
+
+.symbol1 {
+    padding-left: 3vw;
+    background: url(/sign_up_page/img/Page-1.png) no-repeat;
+    background-size: 20px;
+    background-position: 1.2vw;
+}
+
+.symbol2 {
+    padding-left: 3vw;
+    background: url("https://www.freeiconspng.com/thumbs/envelope-icon/envelope-icon-14.png") no-repeat;
+    background-size: 20px;
+    background-position: 1.2vw;
+}
+
+.symbol3 {
+    padding-left: 3vw;
+    background: url("https://www.pngitem.com/pimgs/m/441-4415488_lock-icon-png-transparent-png.png") no-repeat;
+    background-size: 20px;
+    background-position: 1.2vw;
 }
 
 button {
-    border-radius: 24px;
-    margin-top: 40px;
-    margin-bottom: 20px;
-    width: 13vw;
+    border-radius: 30px;
+    width: 220px;
     height: 60px;
+    background-color: blue;
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    border: none;
 }
 
-.grid-container2 {
-    display: grid;
-    width: 40vw;
-    height: 10vh;
-    border: 1px solid black;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
-    margin-left: 50px;
+.button2 {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+p {
+    margin: 10px;
+    margin-bottom: 3vh;
 }
 
 .flexbox-container {
     display: flex;
     width: 25vw;
-    border: 1px solid black;
-    justify-content: space-between;
+    justify-content: space-around;
+    translate: 10vw;
 }
 
 .flexbox-item {
