--- a/how_it_works/css/main.css
+++ b/how_it_works/css/main.css
@@ -72,13 +72,12 @@ a, a:hover{
 
 .card {
     flex-direction:row;
-    border-color: blue;
     background-color: blue;
     color: white;
     margin-top: 3%;
     margin-bottom: 5%;
     margin-left: 20%;
-    border-radius:10px;
+    border-radius:10px 10px 10px 10px;
     text-align: left;
 }
 
@@ -89,30 +88,29 @@ a, a:hover{
 
 }
 
-.card_2 {
-    flex-direction:row;
-    border: none;
-    background-color: blue;
-    color: white;
-    margin-top: 3%;
-    margin-bottom: 5%;
-    margin-left: 20%;
-    border-radius:10px;
-    text-align: left;
-}
 
 .card img{
     background-color: white;
     width: 30%;
 }
 
+.card-img-left {
+    border: 1px solid blue;
+    border-radius: 10px 0px 0px 10px;
+}
+
 .card_2 img{
     background-color: white;
-    width: 40%;
 }
 
 .card_body{
     padding-left: 4%;
     padding-right: 2%;
     padding-bottom: 10%;
+}
+
+
+hr{
+    margin-left: 20%;
+    margin-right: 20%;
 }
